# cellular

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs
src/automata/: gol.rs
src/automata/gol/: mod.rs
