[package]
name = "cellular"
version = "0.1.0"
authors = ["Animo <omrisim@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
conrod = "0.61.1"

[features]
winit = ["conrod/winit"]
glium = ["conrod/glium"]
